# RA

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: Home.py  auth.py  config.py  data.py  persistence.py
app/pages/: 1_Compare_Assets.py  2_Upload_Portfolio.py  3_Recommendations.py  4_Saved_Reports.py  5_Billing.py
core/: data.py  factors.py  metrics.py  models.py  portfolio.py  recommendations.py  regimes.py  reporting.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py
scripts/: run_streamlit.sh  run_webhook.sh
services/: webhook_service.py
tests/: test_metrics.py
