[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfoliolens"
version = "0.1.0"
description = "Streamlit micro-SaaS for portfolio analytics and recommendations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PortfolioLens" }]
dependencies = [
  "streamlit>=1.35.0",
  "pandas>=2.1.0",
  "numpy>=1.26.0",
  "plotly>=5.18.0",
  "yfinance>=0.2.40",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.18",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.4",
  "supabase>=2.4.0",
  "stripe>=9.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
packages = ["core", "app", "services", "db"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
